force-app/main/default/objects/Company__c/Company__c.object-meta.xml
<CustomObject>
    
    <label>Empresa</label>
    <nameField>
        <label>Nome de Empresa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Empresas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>