force-app/main/default/objects/Company__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ativo?</label>
    <type>Checkbox</type>
</CustomField>