force-app/main/default/objects/Company__c/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <label>Complemento</label>
    <length>80</length>
    <type>Text</type>
</CustomField>