force-app/main/default/objects/Company__c/fields/DeliveryCEP__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCEP__c</fullName>
    <label>CEP de Entrega</label>
    <length>80</length>
    <type>Text</type>
</CustomField>