force-app/main/default/objects/Company__c/fields/DeliveryCity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade de Entrega</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Empresas</relationshipLabel>
    <relationshipName>Empresas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>