force-app/main/default/objects/Company__c/fields/DeliveryCountry__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCountry__c</fullName>
    <label>País de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>