force-app/main/default/objects/Company__c/fields/DeliveryNumber__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNumber__c</fullName>
    <label>Número de Entrega</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>