force-app/main/default/objects/Company__c/fields/DeliveryState__c.field-meta.xml
<CustomField>
    <fullName>DeliveryState__c</fullName>
    <label>Estado/Província de Entrega</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>