force-app/main/default/objects/Company__c/fields/DeliveryStreet__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStreet__c</fullName>
    <label>Rua de Entrega</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>