force-app/main/default/objects/Company__c/fields/FoundationDate__c.field-meta.xml
<CustomField>
    <fullName>FoundationDate__c</fullName>
    <label>Data da Fundação</label>
    <type>Date</type>
</CustomField>