force-app/main/default/objects/Company__c/fields/NeighborhoodDelivery__c.field-meta.xml
<CustomField>
    <fullName>NeighborhoodDelivery__c</fullName>
    <label>Bairro de Entrega</label>
    <length>80</length>
    <type>Text</type>
</CustomField>