force-app/main/default/objects/Company__c/fields/StateRegistration__c.field-meta.xml
<CustomField>
    <fullName>StateRegistration__c</fullName>
    <label>Inscrição Estadual</label>
    <length>80</length>
    <type>Text</type>
</CustomField>