force-app/main/default/objects/Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>Active__c</columns>
    <columns>CompanyName__c</columns>
    <columns>CNPJ__c</columns>
    <columns>StateRegistration__c</columns>
    <columns>FoundationDate__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>